--- a/e_diary/diary_app/templates/diary_app/index.html
+++ b/e_diary/diary_app/templates/diary_app/index.html
@@ -1,1 +1,7 @@
-asdasd
+{% extends 'base.html' %}
+
+{% block content %}
+    <h2>Welcome to the School Diary!</h2>
+    <p>This is the home page of the School Diary application.</p>
+    <!-- Add more content specific to the index page as needed -->
+{% endblock %}
